Bug 17549 - Mobile: new maintenance screens display text shifted down

--- a/skins/weborder_mobile/css/maintenance.css
+++ b/skins/weborder_mobile/css/maintenance.css
@@ -1,18 +1,18 @@
 /* main mod start */
 
-#content h2.maintenance {
-    font-size: 4em;
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 2.5em;
+#content .maintenance-wrapper {
+    display: table;
+    height: 100%;
     text-align: center;
-    margin-top: -1.25em;
+    font-size: 4em;
+    font-weight: bold;
+    position: absolute;
+    width: 100%;
 }
 
-#content h2.maintenance span {
-    display: block;
+#content .maintenance {
+    display: table-cell;
+    vertical-align: middle;
 }
-
 
 /* main mod end */
